--- a/_posts/2016-04-26-category.md
+++ b/_posts/2016-04-26-category.md
@@ -3,6 +3,6 @@ layout: post
 category: Coucou
 published: false
 ---
-![PS_Shortcuts.jpg]({{site.baseurl}}/assets/PS_Shortcuts.jpg)## A New Post
+## A New Post
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+![PS_Shortcuts.jpg]({{site.baseurl}}/assets/PS_Shortcuts.jpg)
